--- a/templates/baserecettes.html
+++ b/templates/baserecettes.html
@@ -9,7 +9,7 @@
         <div class="page-header">
             <div class="date">
                 <div class="btn-group">
-                   <a href="{% url 'listerecettes' %}" class="button">Liste des recettes </a>
+                   <a href="{% url 'chercherecette' %}" class="button">Recherche</a>
                 </div>
             </div>
          <h1>Liste des recettes</h1>
