--- a/templates/baseunerecette.html
+++ b/templates/baseunerecette.html
@@ -10,6 +10,7 @@
             <div class="date">
                 <div class="btn-group">
                    <a href="{% url 'listerecettes' %}" class="button">Liste des recettes </a>
+                   <a href="{% url 'chercherecette' %}" class="button">Recherche</a>
                 </div>
             </div>
          <h1>Une des recettes</h1>
