--- a/templates/view_recette.html
+++ b/templates/view_recette.html
@@ -27,7 +27,7 @@
     {% endblock %}
     {% block photo %}
              {% if recette.photo %}
-            <img style='border: 2px solid grey' src="{{ recette.photo.url }}" width="350px" >
+            <img class="img-grande" src="{{ recette.photo.url }}">
           {% endif  %}
    {% endblock %}
 
