--- a/static/recette/style_recette.css
+++ b/static/recette/style_recette.css
@@ -285,3 +285,9 @@ h1::first-letter, h2::first-letter, h3::first-letter, h4::first-letter {
   border-radius: 5px;
   box-shadow: 2px 5px #677C7D;
 }
+
+.img-grande {
+       border-radius: 10px 25px;
+    border: 2px solid grey;
+    width: 350px;
+}
