Ajout du tag safe pour que l'affichage des tags HTML qui sont dans la BD s'affichent correctement

--- a/templates/view_recette.html
+++ b/templates/view_recette.html
@@ -8,12 +8,12 @@
         <h1>{{recette.title }}</h1>
         <div class="date">
             {{recette.contree.nom }} -
-        Préparation : {{ recette.preparation|safe }} min; Cuisson : {{ recette.cuisson }} min</div>
+        Préparation : {{ recette.preparation}} min; Cuisson : {{ recette.cuisson }} min</div>
         .
     </div>
      <h3>Instructions</h3>
       <p>
-          {{recette.instructions }}
+          {{recette.instructions|safe }}
       {% endblock %}
 
       {% block content %}
