Ajout du CSS d'impression et mise en forme des décimales

--- a/templates/baseunerecette.html
+++ b/templates/baseunerecette.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <title>Recettes Malijaï</title>
-        <link rel="stylesheet" href="{% static 'recette/style_recette.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'recette/style_recette.css' %}">
+        <link rel="stylesheet" media="print" type="text/css" href="{% static 'recette/print.css' %}">
     </head>
     <body>
         <div class="page-header">
