Changement des styles et pagination alphabétique

--- a/static/recette/style_recettes.css
+++ b/static/recette/style_recettes.css
@@ -9,9 +9,10 @@ body  {
     margin: 0;
     font-size: 16px;
     font-family: myFirstFont;
-    background: url(IMG_2436.JPG) no-repeat center fixed;
+    background: url(IMG_5999_60.JPG) no-repeat center fixed ;
     background-size: cover;
     height: 95%;
+
 }
 
 p  {
