--- a/templates/liste.html
+++ b/templates/liste.html
@@ -5,7 +5,7 @@
         <h1>Recettes</h1>
 {% block content %}
 
-    {% for recette in recettes %}
+    {% for recette in page.object_list %}
         <div class="post">
             <div class="date">
                  {{recette.contree.nom }} -
@@ -31,25 +31,15 @@
 
 {% block pagination %}
 <div class="pagination">
-{% if recettes.has_other_pages %}
-    {% if recettes.has_previous %}
-      <a href="?page={{ posts.previous_page_number }}">&laquo;</a>
-    {% else %}
-       <a href="#" >&laquo;</a>
-    {% endif %}
-    {% for i in recettes.paginator.page_range %}
-      {% if recettes.number == i %}
-       <a href="#" class="active"(current)>{{ i }}</a>
-      {% else %}
-        <a href="?page={{ i }}">{{ i }}</a>
-      {% endif %}
-    {% endfor %}
-    {% if recettes.has_next %}
-      <a href="?page={{ posts.next_page_number }}">&raquo;</a>
-    {% else %}
-       <a href="#" >&raquo;</a>
-    {% endif %}
-{% endif %}
+                <div class="pagination">
+                    {% for p in page.paginator.pages %}
+                        {% ifequal p page %}
+                            <a class="active" href="">{{ page }}</a>
+                        {% else %}
+                            <a href="?page={{ p.number }}">{{ p }}</a>
+                        {% endifequal %}
+                    {% endfor %}
+                </div>
 </div>
  {% endblock %}
 
