AMélioration des templates et ajout du template pour les résultas de la recherche

--- a/templates/baseunerecette.html
+++ b/templates/baseunerecette.html
@@ -10,7 +10,7 @@
         <div class="page-header">
             <div class="date">
                 <div class="btn-group">
-                   <a href="{% url 'listerecettes' %}" class="button">Liste des recettes </a>
+                   <a href="{% url 'listerecettes' %}" class="button">Toutes les recettes </a>
                    <a href="{% url 'chercherecette' %}" class="button">Recherche</a>
                 </div>
             </div>
