--- a/templates/baseunerecette.html
+++ b/templates/baseunerecette.html
@@ -32,8 +32,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="footer">
+        <div class="noprint footer">
             <div class="footergauche">
               {% block pagination %}
               {% endblock %}
