--- a/templates/view_recette.html
+++ b/templates/view_recette.html
@@ -9,15 +9,14 @@
         <h1>{{recette.title }}</h1>
         <div class="date">
             {{recette.contree.nom }} -
-        Préparation : {{ recette.preparation}} min; Cuisson : {{ recette.cuisson }} min</div>
-        .
+        Préparation : {{ recette.preparation}} min; Cuisson : {{ recette.cuisson }} min
+        </div>
     </div>
      <h3>Instructions</h3>
-      <p>
           {{recette.instructions|safe }}
-      {% endblock %}
+{% endblock %}
 
-      {% block content %}
+{% block content %}
     <h3>Ingrédients</h3>
 <ul>
     {% for ingredient in ingredients %}
@@ -31,17 +30,15 @@
         </li>
     {% endfor %}
 </ul>
+{% endblock %}
 
-    {% endblock %}
-    {% block photo %}
-             {% if recette.photo %}
-            <img class="img-grande" src="{{ recette.photo.url }}">
-          {% endif %}
-   {% endblock %}
+{% block photo %}
+    {% if recette.photo %}
+        <img class="img-grande" src="{{ recette.photo.url }}">
+    {% endif %}
+{% endblock %}
 
 {% block pagination %}
 <div class="pagination">
-
 </div>
  {% endblock %}
-
