--- a/templates/baserecettes.html
+++ b/templates/baserecettes.html
@@ -3,9 +3,9 @@
 <html>
     <head>
         <title>Recettes Malijaï</title>
-        <link rel="stylesheet" href="{% static 'recette/style_recettes.css' %}">
+        <link rel="stylesheet" href="{% static 'recette/recettes_css.css' %}">
     </head>
-    <body>
+    <body class="multiples">
         <div class="page-header">
             <div class="date">
                 <div class="btn-group">
