--- a/templates/chercherecette.html
+++ b/templates/chercherecette.html
@@ -1,19 +1,18 @@
 {% extends 'baseunerecette.html' %}
 {% load i18n %}
 
-{% block instructions %}
-<h2>Recherche de terme (ou de portion de mot) dans les instructions ou les noms des recettes</h2>
+{% block recherche %}
+<div class="post">
+    <h4>Recherche de terme (ou de portion de mot) dans les instructions ou les noms des recettes</h4>
     {% if message %}
-        <h3>Le terme : <u>{{ message}}</u> n'a pas été trouvé dans les instructions ni dans les noms des recettes </h3>
+        <h4>Le terme : <u>{{ message}}</u> n'a pas été trouvé dans les instructions ni dans les noms des recettes </h4>
     {% endif %}
-{% endblock %}
-{% block content %}
     <form method="post">
         {% csrf_token %}
         <table>
           {{ form.as_table }}
-            <tr><td></td><td><button type="submit" class="btn-default"> Rechercher </button></td>
+            <tr><td></td><td><button type="submit" class="w3-button w3-orange"> Rechercher </button></td>
      </table>
     </form>
-
-{% endblock %}
+</div>
+{% endblock recherche %}
