--- a/static/recette/recettes_css.css
+++ b/static/recette/recettes_css.css
@@ -59,6 +59,8 @@ h1::first-letter, h2::first-letter, h3::first-letter, h4::first-letter {
    margin:5 auto;
    padding: 10px 0px 50px 10px;
    min-height: 50%;
+   height: 90%;
+   overflow: auto;
 }
 
 .left_corps {
@@ -70,6 +72,9 @@ h1::first-letter, h2::first-letter, h3::first-letter, h4::first-letter {
    float:left;
    width:80%;
    margin-left: 5%;
+   height: 90%;
+   overflow: auto;
+   scrollbar-color: #2D3B08 #f0e68c;
 }
 
 .point_col {
