Changement des styles et pagination alphabétique

--- a/templates/baseunerecette.html
+++ b/templates/baseunerecette.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Recettes Malijaï Caulet</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'recette/recettes_css.css' %}">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static '/recette/w3.css' %}">
     <link rel="stylesheet" media="print" type="text/css" href="{% static '/recette/print.css' %}">
@@ -34,7 +35,7 @@
     {% endblock recherche %}
 
 </div>
-<div class="footer noprint">
+<div class="footer noprint w3-bottom">
     <a href="https://github.com/Malijai/" class="date" ><img src="/static/images/GitHub-Mark-Light-32px.png"></a>
 </div>
 </body>
